# rover_ws

./: .gitignore
src/gazebo_test/: CMakeLists.txt  package.xml
src/mobile_robot/: CMakeLists.txt  package.xml
src/mobile_robot/launch/: gazebo_model.launch.py
src/mobile_robot/model/: robot.gazebo  robot.xacro
src/mobile_robot/parameters/: bridge_parameters.yaml
src/nav_pkg/: README.md  package.xml  setup.py
src/nav_pkg/config/: nav2_params_real.yaml  params that work on real robot.yaml
src/nav_pkg/launch/: localization_launch_real.py  localization_launch_sim.py  (+2 more)
src/robot_control_pkg/: CMakeLists.txt  README.md  package.xml  robot_control_pkg.xml
src/robot_control_pkg/bringup/config/: diffbot_controllers.yaml  joystick.yaml  twist_mux.yaml
src/robot_control_pkg/bringup/launch/: diffbot.launch.py  joystick.launch.py  real_robot_launch.py
src/robot_control_pkg/description/models/: base_link.STL  front_caster_link.STL
src/robot_control_pkg/description/ros2_control/: diffbot.ros2_control.xacro
src/robot_control_pkg/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/robot_control_pkg/doc/: userdoc.rst
src/robot_control_pkg/hardware/: diffbot_system.cpp
src/robot_control_pkg/hardware/include/robot_control_pkg/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
src/rover_control/: package.xml  setup.py
src/serial_robot_control_arduino/: README.md  serial_robot_control_arduino.ino
src/simulation_pkg/: README.md  package.xml  setup.cfg  setup.py
src/slam_pkg/: README.md  package.xml  setup.py
(+30 files in other folders)
